# mermaid-diagram-generator

a2a-agent/: .env.example  pyproject.toml
a2a-agent/src/a2a_agent/: __init__.py  agent.py  agent_executor.py
a2a-agent/src/a2a_agent/utils/: env.py  llm_model.py  logger.py  mcp_tools.py
a2a-inspector/: .gitignore  run.sh
agent-ui/: package-lock.json  package.json
agent-ui/app/: layout.tsx  page.tsx  store-provider.tsx
agent-ui/app/dashboard/: layout.tsx  page.tsx
agent-ui/app/dashboard/chat/: page.tsx
agent-ui/components/: MarkdownViewer.tsx  add-agent.tsx  app-sidebar.tsx
agent-ui/components/ui/: typography.tsx
agent-ui/lib/: api.ts  store.ts
agent-ui/lib/features/: add-agent-slice.ts
doc-scraper/: .env.example  main.py  pyproject.toml
doc-scraper/utils/: embedding_model.py  env.py  milvus.py
mcp-server/: Dockerfile  pyproject.toml
mcp-server/src/mcp_server/: __init__.py  server.py
mcp-server/src/mcp_server/utils/: embedding_model.py  env.py  logger.py  milvus.py
vector-store/: docker-compose.yml  run-in-container.sh
