[project]
name = "doc-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-milvus>=0.3.2",
    "langchain-ollama>=1.0.1",
    "tqdm>=4.67.1",
]