[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chintan Soni", email = "ichintansoni@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-milvus>=0.3.2",
    "langchain-ollama>=1.0.1",
    "mcp[cli]>=1.25.0",
]

[project.scripts]
mcp-server = "mcp_server:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
